tests/snapshots/render__clean_tree.snap
---
source: tests/render.rs
expression: "render(44, 20, s)"
---
 main ↑2 ↓0                            ↻ 2m 
 origin/main · v0.1.9+4 · stash 1           
╭ ▾ Changes ───────────────────────────────╮
│ ✓ clean                                  │
╰──────────────────────────────────────────╯
╭ ▾ Activity ──────────────────────────────╮
│ 04:43 commit 4de1e3c icons: jug on cream │
│ 03:45 commit ebf9d60 pin engine to v0.1… │
│ 03:40 pushed origin/main 59eb9c3         │
│ 03:22 checkout main                      │
╰──────────────────────────────────────────╯
╭ ▾ Commits ─────────────────────────── ↑2 ╮
│ 4de1e3c ↑ icons: jug on cream         2m │
│ ebf9d60 ↑ pin engine to v0.1.9        1h │
│ 59eb9c3   xcode settings in project.… 1h │
│ 8e6bbde   release v0.1.9              2h │
╰──────────────────────────────────────────╯
  ▸ Branches (4)                            
  ▸ Stashes (1)                             
 ? help  f fetch  q quit
