tests/snapshots/render__help_shows_in_the_one_line_layout.snap
---
source: tests/render.rs
expression: "draw(&mut app, 20, 8)"
---
 q quit             
 f fetch now        
 ? close help
